# reptile

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  REPOSPECS.md  SPECS.md  cursor_rl_proposal.md  hpcc_classifier_job.sh  hpcc_complete_job.sh  hpcc_conda_job.sh  hpcc_final_job.sh  hpcc_miniconda_job.sh  hpcc_test_job.sh  pyproject.toml  run_app.ps1  run_app.py  test_script.py
.cursor/rules/: 000-cursor-rules.mdc  001-rule-generator.mdc  005-git-commit-automation.mdc  007-worktree-management.mdc  1000-python-code-style.mdc  1001-python-testing.mdc  1002-python-project-structure.mdc  1003-python-dependencies.mdc  1004-python-documentation.mdc  1005-python-error-handling.mdc  1006-python-performance.mdc  1007-python-security.mdc  1008-python-logging.mdc  1009-python-async.mdc  1010-python-types.mdc  1011-jupyter-notebook-standards.mdc  2001-python-app-organization.mdc
Project3_new/: Project3.md  report.md
Project3_new/starter_code/: convert_to_json.py  pig_latin_sentences.py  positional_encoding.py  preprocess_data.py  q1.py  q2.py  q2_double_save.py  q2_test.py  yelp_dataset.py
Project3_new/starter_code/data/: pig_latin_test.json  pig_latin_val.json
Project3_new/starter_code/results/: q1_test.txt  q2_test.txt
Project4/: Project4.md
Project4/starter_code/: README.md  README_HPCC.md  classifier.py  cond_gen.py  dashboard_server.py  data.py  hpcc_classifier_job.sh  hpcc_environment_setup.sh  lr_test.py  lr_test_denoiser.py  training_monitor.py  uncond_gen.py
docs/: problem1_markov_analysis.md  problem2_mouse_house.md
projects/cse_algorithms/: README.md
projects/cse_algorithms/problems/HW4/: HW4.md
projects/cse_algorithms/problems/HW4/q1_deteriorating_conditions/: README.md  main.py
projects/cse_algorithms/problems/HW4/q2_monstrous_power/: README.md  main.py
projects/cse_algorithms/problems/HW4/q3_maximizing_monsters/: README.md  main.py
projects/cse_algorithms/problems/HW4/q4_weirdest_programming_language/: README.md  main.c  main.cpp  main.py
projects/cse_algorithms/problems/HW4/q5_lickety_split/: README.md  main.cpp  main.py
projects/cse_algorithms/shared/template/: README.md  pyproject.toml
projects/cursor_rl/: cursor_rl_proposal.md
projects/markov_mouse/: README.md  pyproject.toml
projects/markov_mouse/scripts/: run_matrix_viz.py
projects/markov_mouse/src/core/: markov_chain.py
projects/markov_mouse/src/markov/: __init__.py
projects/markov_mouse/src/models/: mouse_simulation.py
projects/markov_mouse/src/mouse/: __init__.py
projects/markov_mouse/src/visualization/: markov_walkthrough.py  mouse_house_walkthrough.py
projects/markov_mouse/tests/: conftest.py
projects/markov_mouse/tests/unit/models/: test_markov_chain.py
projects/markov_mouse/tests/unit/utils/: test_matrix_ops.py  test_visualization.py
scripts/: run_mouse_house.py
specs/: 01-interactivity.md  02-educational-content.md  03-scalability.md  04-best-practices.md  05-documentation.md
src/educational_app/: README.md  __init__.py  app.py  policy_iteration.py  test_policy_iteration.py
src/educational_app/utils/: __init__.py  data_utils.py
src/markov_rl/: __init__.py
src/markov_rl/models/: q_learning.py
src/markov_rl/utils/: matrix_ops.py  visualization.py
src/markov_rl/visualization/: markov_walkthrough.py  matrix_viz.py  mouse_house_walkthrough.py
tests/unit/models/: test_q_learning.py
