[tool.poetry]
name = "markov-mouse"
version = "0.1.0"
description = "Markov chain analysis and mouse house simulation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
networkx = "^3.0"
streamlit = "^1.30.0"
plotly = "^5.18.0"
sympy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing" 